use jpl instead of jul clean up