@@ -8,16 +8,17 @@ package vavi.net.auth.oauth2.amazon;
 
 import java.io.IOException;
 import java.io.UncheckedIOException;
-import java.nio.charset.StandardCharsets;
+import java.lang.System.Logger;
+import java.lang.System.Logger.Level;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.function.Supplier;
-import java.util.logging.Level;
 
 import vavi.net.auth.AppCredential;
 import vavi.net.auth.oauth2.TokenRefresher;
-import vavi.util.Debug;
+
+import static java.lang.System.getLogger;
 
 
 /**
@@ -28,21 +29,23 @@ import vavi.util.Debug;
  */
 public class AmazonLocalTokenRefresher implements TokenRefresher<String> {
 
+    private static final Logger logger = getLogger(AmazonLocalTokenRefresher.class.getName());
+
     /** for refreshToken */
-    private Path file;
+    private final Path file;
 
     /**
      * @param refresh you should call {@link #writeRefreshToken(String)} and return new refresh delay.
      */
     public AmazonLocalTokenRefresher(AppCredential appCredential, String id, Supplier<Long> refresh) {
         this.file = Paths.get(System.getProperty("user.home"), ".vavifuse", appCredential.getScheme(), id);
-Debug.println("file: " + file);
+logger.log(Level.DEBUG, "file: " + file);
     }
 
     /* @see vavi.net.auth.oauth2.TokenRefresher#writeRefreshToken(String) */
     public void writeRefreshToken(String save) throws IOException {
-        Files.write(file, save.getBytes(StandardCharsets.UTF_8));
-Debug.println(Level.FINE, "refreshToken: " + save);
+        Files.writeString(file, save);
+logger.log(Level.DEBUG, "refreshToken: " + save);
     }
 
     /**
@@ -50,8 +53,8 @@ Debug.println(Level.FINE, "refreshToken: " + save);
      */
     public String readRefreshToken() throws IOException {
         if (Files.exists(file)) {
-            String state = new String(Files.readAllBytes(file), StandardCharsets.UTF_8);
-Debug.println(Level.FINE, "restore: " + state);
+            String state = Files.readString(file);
+logger.log(Level.DEBUG, "restore: " + state);
             return state;
         } else {
             return null;
