@@ -8,17 +8,18 @@ package vavi.net.auth.oauth2.box;
 
 import java.io.IOException;
 import java.io.UncheckedIOException;
+import java.lang.System.Logger;
+import java.lang.System.Logger.Level;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.function.Supplier;
-import java.util.logging.Level;
 
 import vavi.net.auth.AppCredential;
 import vavi.net.auth.oauth2.TokenRefresher;
-import vavi.util.Debug;
 
+import static java.lang.System.getLogger;
 import static java.nio.file.StandardOpenOption.CREATE;
 
 
@@ -30,22 +31,24 @@ import static java.nio.file.StandardOpenOption.CREATE;
  */
 public class BoxLocalTokenRefresher implements TokenRefresher<String> {
 
+    private static final Logger logger = getLogger(BoxLocalTokenRefresher.class.getName());
+
     /** for refreshToken */
-    private Path file;
+    private final Path file;
 
     /**
      * @param refresh you should call {@link #writeRefreshToken(String)} and return new refresh delay.
      */
     public BoxLocalTokenRefresher(AppCredential appCredential, String id, Supplier<Long> refresh) {
         this.file = Paths.get(System.getProperty("user.home"), ".vavifuse", appCredential.getScheme(), id);
-Debug.println(Level.FINE, "file: " + file);
+logger.log(Level.DEBUG, "file: " + file);
     }
 
     /* @see vavi.net.auth.oauth2.TokenRefresher#writeRefreshToken(String) */
     public void writeRefreshToken(String save) throws IOException {
         Files.createDirectories(file.getParent());
-        Files.write(file, save.getBytes(StandardCharsets.UTF_8), CREATE);
-Debug.println(Level.FINE, "refreshToken: " + save);
+        Files.writeString(file, save, CREATE);
+logger.log(Level.DEBUG, "refreshToken: " + save);
     }
 
     /**
@@ -53,8 +56,8 @@ Debug.println(Level.FINE, "refreshToken: " + save);
      */
     public String readRefreshToken() throws IOException {
         if (Files.exists(file)) {
-            String state = new String(Files.readAllBytes(file), StandardCharsets.UTF_8);
-Debug.println(Level.FINE, "restore: " + state);
+            String state = Files.readString(file);
+logger.log(Level.DEBUG, "restore: " + state);
             return state;
         } else {
             return null;
